[package]
name = "projfs"
version = "0.1.3"
authors = ["renyuneyun (Rui ZHAO) <renyuneyun@gmail.com>"]
edition = "2018"

[dependencies]
bimap = "0.4"
clap = {version = "~2.27.0", features = ["yaml"]}
dirs = "2.0"
env_logger = "0.7"
fuse_mt = "0.5"
libc = "0.2"
log = "0.4"
mime_guess = "2.0"
regex = "1.3"
seahash = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = "0.2"

